# shinkansen

./: .gitignore  Cargo.toml  LICENSE.md  README.md  justfile
examples/: EXAMPLES.md  config.json  nginx.conf.template  project.md.template
src/: cli.rs  config.rs  error.rs  lib.rs  main.rs  output.rs  platform.rs  processing.rs  rendering.rs  variables.rs
tests/: cli_tests.rs  config_tests.rs  integration_tests.rs  output_tests.rs  platform_tests.rs  processing_tests.rs  rendering_tests.rs  variables_tests.rs
