[package]
name = "shinkansen"
version = "0.1.0"
description = "A CLI file preprocessor using Tera templates"
authors = ["Brent Beardsley <brentbeardsley@gmail.com>"]
repository = "https://github.com/bbeardsley/shinkansen"
license = "MIT"
edition = "2024"
keywords = ["cli", "preprocessor", "tera", "templates"]
categories = ["command-line-utilities", "development-tools", "filesystem", "template-engine"]
readme = "README.md"

[lib]
name = "shinkansen_lib"
path = "src/lib.rs"
publish = false

[dependencies]
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
tera = "1.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.9.8"
walkdir = "2.5"
tempfile = "3.10"

[dev-dependencies]
tempfile = "3.10"
